--- a/main.html
+++ b/main.html
@@ -1,16 +1,24 @@
+
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1 id="f1" style="background-color: yellow;text-align: center;">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrBwARZpC1OVgQCHh9JbNmL52o4rWFjVwlEw&s" alt="">
+    </h1>
+    <p>
+        Flowers always make people better, happier, and more helpful; they are sunshine, food and medicine for the soul.” Flowers offer more to the planet than merely natural artwork and beauty. They are essential to removing carbon dioxide and toxins in the air. 
+    </p>
+    <h1 id="f2" style="background-color: yellow;text-align: center;">
+        <img src="https://img.freepik.com/free-photo/beautiful-rose-nature_23-2150737397.jpg" alt="">
+    </h1>
+    <p>
+        Their stems are usually prickly and their glossy, green leaves have toothed edges. Rose flowers vary in size and shape. They burst with colours ranging from pastel pink, peach, and cream, to vibrant yellow, orange, and red. Many roses are fragrant, and some produce berry-like fruits called hips.
+    </p>
+    
 </body>
-
 </html>
