--- a/main.html
+++ b/main.html
@@ -1,29 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body style="background-color: yellow; text-align: center;">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body style="background-color: yellow; text-align: center">
     <div>
-    <h1 id="f1">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrBwARZpC1OVgQCHh9JbNmL52o4rWFjVwlEw&s" alt="">
-        <img src="https://www.gardendesign.com/pictures/images/675x529Max/site_3/helianthus-yellow-flower-pixabay_11863.jpg" alt="">
-    </h1>
-    <p>
-        Flowers always make people better, happier, and more helpful; they are sunshine, food and medicine for the soul.” Flowers offer more to the planet than merely natural artwork and beauty. They are essential to removing carbon dioxide and toxins in the air. 
-    </p>
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrBwARZpC1OVgQCHh9JbNmL52o4rWFjVwlEw&s"
+        alt=""
+      />
+      <img
+        src="https://www.gardendesign.com/pictures/images/675x529Max/site_3/helianthus-yellow-flower-pixabay_11863.jpg"
+        alt=""
+      />
+      <img
+        src="https://www.thespruce.com/thmb/-SEvcDRp722ZhpMzLjxgR0HkxuU=/6016x0/filters:no_upscale():max_bytes(150000):strip_icc()/plants-with-big-flowers-4138211-hero-b10becb169064cc4b3c7967adc1b22e1.jpg"
+        alt=""
+      />
     </div>
+    <h1 id="f1">Flowers photos</h1>
+    <p>
+      Flowers always make people better, happier, and more helpful; they are
+      sunshine, food and medicine for the soul.” Flowers offer more to the
+      planet than merely natural artwork and beauty. They are essential to
+      removing carbon dioxide and toxins in the air.
+    </p>
+
     <div>
-    <h1 id="f2">
-        <img src="https://img.freepik.com/free-photo/beautiful-rose-nature_23-2150737397.jpg" alt="">
-        <img src="https://plantparadise.in/cdn/shop/products/ROSE1_3be31c6b-7240-4783-bec9-74ee43c5d02c.jpg?v=1691200481" alt="">
-        <img src="https://www.plantsguru.com/image/cache/data/Flowering%20Plants/Rose/plantsguru-flowering-plants-rose-red-800x800.jpg" alt="">
-    </h1>
-    <p>
-        Their stems are usually prickly and their glossy, green leaves have toothed edges. Rose flowers vary in size and shape. They burst with colours ranging from pastel pink, peach, and cream, to vibrant yellow, orange, and red. Many roses are fragrant, and some produce berry-like fruits called hips.
-    </p>
+      <img
+        src="https://img.freepik.com/free-photo/beautiful-rose-nature_23-2150737397.jpg"
+        alt=""
+      />
+      <img
+        src="https://plantparadise.in/cdn/shop/products/ROSE1_3be31c6b-7240-4783-bec9-74ee43c5d02c.jpg?v=1691200481"
+        alt=""
+      />
+      <img
+        src="https://www.plantsguru.com/image/cache/data/Flowering%20Plants/Rose/plantsguru-flowering-plants-rose-red-800x800.jpg"
+        alt=""
+      />
     </div>
-    
-</body>
+    <h1 id="f2">Roses pictures</h1>
+    <p>
+      Their stems are usually prickly and their glossy, green leaves have
+      toothed edges. Rose flowers vary in size and shape. They burst with
+      colours ranging from pastel pink, peach, and cream, to vibrant yellow,
+      orange, and red. Many roses are fragrant, and some produce berry-like
+      fruits called hips.
+    </p>
+  </body>
 </html>
